# chip-8-emu

./: .gitignore  CMakeLists.txt  Makefile  README.md  chip8.c  chip8.h  main.c
.github/workflows/: cmake.yml
cmake/: copy-resources.cmake
src/: CMakeLists.txt  chip8.c  chip8.h  main.c
